--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16969634262">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-17025182038"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'AW-17025182038');
-  <!-- Event snippet for Website lead conversion page -->
+      gtag("config", "AW-17025182038");
+    </script>
 
-  gtag('event', 'conversion', {'send_to': 'AW-AW-17025182038/HG6ZCPiG1LIaENaj4Js_'});
-
-
-</script>
     <link
       href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
       rel="stylesheet"
